test/functions/varargs/issue-20371-string-count.good
issue-20371-string-count.chpl:8: error: variadic arguments count must be a 'param' integer type
